--- a/Romanian/main/framework-res.apk/res/raw-ro/incognito_mode_start_page.html
+++ b/Romanian/main/framework-res.apk/res/raw-ro/incognito_mode_start_page.html
@@ -6,7 +6,7 @@
   <body>
     <p><strong>Navigaţi incognito</strong>. Paginile pe care le afişaţi în această fereastră nu vor apărea în istoricul browserului sau al căutărilor şi nu vor lăsa alte urme, precum cookie-uri, pe dispozitivul dvs. după ce închideţi fereastra incognito. Dar fişierele descărcate şi marcajele create vor fi păstrate.</p>
 
-    <p><strong>Navigarea incognito nu influenţează comportamentul altor persoane, servere sau aplicaţii software. Fiţi atent(ă) la:</strong></p>
+    <p><strong>Navigarea incognito nu influenţează comportamentul altor persoane, servere sau aplicaţii software. Fiţi atent la:</strong></p>
 
     <ul>
       <li>site-urile web care colectează sau distribuie informaţii despre dvs.;</li>
