--- a/Romanian/main/framework-res.apk/res/raw-ro/nodomain.html
+++ b/Romanian/main/framework-res.apk/res/raw-ro/nodomain.html
@@ -15,7 +15,7 @@
 
             <p><b>Iată câteva sfaturi:</b></p>
             <ul>
-                <li>Asigurați-vă că dispozitivul are semnal şi o conexiune date activată.</li>
+                <li>Asigurați-vă că dispozitivul are semnal şi o conexiune de date activată.</li>
                 <li>Repetați încărcarea paginii web mai târziu.</li>
                 <li>Vizualizaţi copia paginii web salvată în memoria cache Google.</li>
 
